[gd_scene load_steps=12 format=3 uid="uid://suxkid5wirl7"]

[ext_resource type="Script" uid="uid://bytmry1u22m57" path="res://scene/ui/inventory.gd" id="1_4e3ot"]
[ext_resource type="Texture2D" uid="uid://dpiai8p0p2pva" path="res://assets/tileset/ui_1.png" id="1_tp23u"]
[ext_resource type="Theme" uid="uid://l6aifit45yok" path="res://theme/uibutin.tres" id="2_mtuum"]
[ext_resource type="FontFile" uid="uid://dsix43ph6yvjm" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="3_jgsnw"]
[ext_resource type="Texture2D" uid="uid://ypqit6hfpupx" path="res://assets/tileset/ui_2.png" id="3_mtuum"]
[ext_resource type="Texture2D" uid="uid://cgsfenpvjdu1u" path="res://assets/player/nobita1.png" id="4_5yxf2"]
[ext_resource type="FontFile" uid="uid://b2gpejxs3yk6e" path="res://assets/fonts/Jersey15-Regular.ttf" id="7_7saj3"]
[ext_resource type="AudioStream" uid="uid://c7qpnivbu66cv" path="res://assets/music/sfc/inventory-grab-36275.mp3" id="8_kbp00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tp23u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yxf2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgsnw"]
bg_color = Color(0.122252, 0.122252, 0.122252, 0.890196)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_4e3ot")

[node name="inv screen all" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="left area" type="Panel" parent="inv screen all"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tp23u")

[node name="TextureRect" type="TextureRect" parent="inv screen all/left area"]
layout_mode = 2
offset_right = 285.0
offset_bottom = 476.0
scale = Vector2(1, 0.66)
texture = ExtResource("1_tp23u")

[node name="left selection area" type="VBoxContainer" parent="inv screen all/left area"]
layout_mode = 2
offset_left = 19.0
offset_top = 13.0
offset_right = 271.0
offset_bottom = 162.0

[node name="Button" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "Items"
alignment = 0

[node name="Button2" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "Equipment	"
alignment = 0

[node name="Button3" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "Skills
"
alignment = 0

[node name="Button4" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "Status
"
alignment = 0

[node name="Button6" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "        "
alignment = 0

[node name="Button5" type="Button" parent="inv screen all/left area/left selection area"]
layout_mode = 2
theme = ExtResource("2_mtuum")
text = "Exit Game"
alignment = 0

[node name="riight" type="Panel" parent="inv screen all"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.02
theme_override_styles/panel = SubResource("StyleBoxEmpty_5yxf2")

[node name="Button" type="Button" parent="inv screen all/riight"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 848.0
offset_bottom = 356.0
theme = ExtResource("2_mtuum")

[node name="TextureRect" type="TextureRect" parent="inv screen all/riight/Button"]
layout_mode = 0
offset_left = -15.0
offset_top = -14.0
offset_right = 849.0
offset_bottom = 969.0
scale = Vector2(1, 0.66)
texture = ExtResource("3_mtuum")

[node name="Panel" type="Panel" parent="inv screen all/riight/Button"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 492.0
offset_bottom = 333.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jgsnw")

[node name="Name" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.108
offset_left = 428.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = 0.115997
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 43
text = "Nobita"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 475.0
offset_top = 5.0
offset_right = 477.0
offset_bottom = 317.0

[node name="ColorRect2" type="ColorRect" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 475.0
offset_top = 68.0
offset_right = 477.0
offset_bottom = 380.0
rotation = 1.57141

[node name="ColorRect3" type="ColorRect" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 245.0
offset_top = 217.0
offset_right = 246.0
offset_bottom = 319.0

[node name="Label" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 81.0
offset_right = 57.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "Lvl:"

[node name="Label3" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 329.0
offset_top = 81.0
offset_right = 369.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "HP:"

[node name="Label4" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 329.0
offset_top = 123.0
offset_right = 369.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "TP:"

[node name="Label2" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 124.0
offset_right = 57.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "Exp:"

[node name="Label5" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 79.0
offset_top = 292.0
offset_right = 173.0
offset_bottom = 322.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "Primary"

[node name="Label6" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 295.0
offset_top = 292.0
offset_right = 421.0
offset_bottom = 322.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "Secondary"

[node name="lvl" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 53.0
offset_top = 81.0
offset_right = 93.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0.491312, 0.491312, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24

[node name="hp" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 365.0
offset_top = 81.0
offset_right = 405.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0.591842, 0.0917281, 3.36915e-07, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24

[node name="tp" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 365.0
offset_top = 123.0
offset_right = 453.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(0.530034, 0.200501, 0, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24

[node name="exp" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 124.0
offset_right = 105.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0.984314, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24

[node name="status" type="Label" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 168.0
offset_right = 65.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jgsnw")
theme_override_font_sizes/font_size = 24
text = "Normal"

[node name="primary" type="TextureRect" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 206.0
offset_right = 227.0
offset_bottom = 294.0

[node name="secondary" type="TextureRect" parent="inv screen all/riight/Button/Panel"]
layout_mode = 0
offset_left = 260.0
offset_top = 206.0
offset_right = 459.0
offset_bottom = 294.0

[node name="TextureRect2" type="TextureRect" parent="inv screen all/riight/Button"]
layout_mode = 0
offset_left = 500.0
offset_top = 10.0
offset_right = 824.0
offset_bottom = 499.0
scale = Vector2(1, 0.66)
texture = ExtResource("1_tp23u")

[node name="character" type="TextureRect" parent="inv screen all/riight/Button"]
layout_mode = 0
offset_left = 507.0
offset_top = 18.0
offset_right = 815.0
offset_bottom = 325.0
texture = ExtResource("4_5yxf2")

[node name="Label" type="Label" parent="inv screen all/riight"]
layout_mode = 0
offset_left = 234.0
offset_top = 350.0
offset_right = 307.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource("7_7saj3")
theme_override_font_sizes/font_size = 28
text = "Quests"

[node name="Label2" type="Label" parent="inv screen all/riight"]
layout_mode = 0
offset_left = 15.0
offset_top = 383.0
offset_right = 443.0
offset_bottom = 412.0
theme_override_fonts/font = ExtResource("7_7saj3")
theme_override_font_sizes/font_size = 28
text = "-Quest system WIP, For now just explore, and
equipment system, zombies, inventory, door 
and key, player, etc systems work.."

[node name="ColorRect3" type="ColorRect" parent="inv screen all/riight"]
layout_mode = 0
offset_left = 500.0
offset_top = 364.0
offset_right = 502.0
offset_bottom = 596.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kbp00")
bus = &"sfx"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="inv screen all/left area/left selection area/Button" to="." method="_on_button_pressed"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="pressed" from="inv screen all/left area/left selection area/Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button3" to="." method="_on_button_3_focus_entered"]
[connection signal="pressed" from="inv screen all/left area/left selection area/Button3" to="." method="_on_button_3_pressed"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button4" to="." method="_on_button_4_focus_entered"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button6" to="." method="_on_button_6_focus_entered"]
[connection signal="focus_entered" from="inv screen all/left area/left selection area/Button5" to="." method="_on_button_5_focus_entered"]
